hphp/test/slow/hhbbc/option_type_hint_001.php.expectf

Warning: foo() expects exactly 1 parameter, 0 given in %s/slow/hhbbc/option_type_hint_001.php on line 6

Catchable fatal error: Argument 1 to Foo::foo() must be of type ?Foo, undefined variable given in %s/slow/hhbbc/option_type_hint_001.php on line 6
